--- a/src/wp-content/themes/zippy-elementor-child/assets/sass/_custom_enquiry_form.scss
+++ b/src/wp-content/themes/zippy-elementor-child/assets/sass/_custom_enquiry_form.scss
@@ -66,7 +66,7 @@
 
     .form-section-title {
         font-weight: 700;
-        font-size: 17px;
+        font-size: 20px;
     }
 
     .w-100 {
@@ -106,6 +106,10 @@
 
 .mb-3 {
     margin-bottom: 1rem;
+}
+
+.mb-4  {
+    margin-bottom: 1.5rem;
 }
 
 .mb-0 {
